Updated ProjectCard styling, fixed overflow issues in sidebar, updated Project type

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -23,7 +23,7 @@ $[attribute]-[name]--[modifier]
   --color-orange: #f2a84c;
   --color-stroke: #e9edf1;
   --color-border: #bfbfbf;
-  --color-gray--hover: #f0f0f0;
+  --color-gray--hover: #f8f8f8;
 
   --color-customization-classic-background: #1e1f21;
   --color-customization-maroon-background: #5b073a;
