--- a/src/styles/pages/_workspaces.scss
+++ b/src/styles/pages/_workspaces.scss
@@ -1,6 +1,8 @@
 .workspace {
   &-page {
     margin: 0 auto;
+    height: 100%;
+    overflow-y: auto;
   }
 
   &__sections {
